data/derived/fa15/progs/unify/prog2644.ml.out
Characters 29-47:
  let fixpoint (f,b) = wwhile (((f b), b = (f b)) ,b);;
                               ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
